# light-scrap-vidz-mobile

./: .gitignore  README.md
.github/workflows/: android.yml  ci.yml  release.yml
app/: App.tsx  app.json  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json
app/src/: theme.ts
app/src/components/: AudioToggle.tsx  Badge.tsx  DownloadButton.tsx  FormatSelector.tsx  GlassCard.tsx  HistoryList.tsx  PlaylistEndSelector.tsx  PlaylistPreview.tsx  ProgressCard.tsx  QueuePanel.tsx  SettingsModal.tsx  UrlInput.tsx  VideoPreview.tsx
app/src/hooks/: useDownload.ts  useHistory.ts  usePlaylistInfo.ts  useQueue.ts  useVideoInfo.ts
app/src/lib/: api.ts  config.ts  error-parser.ts  notify.ts  platform.ts  save.ts  url-validator.ts  utils.ts
app/src/lib/__tests__/: config.test.ts  error-parser.test.ts  url-validator.test.ts  utils.test.ts
app/src/types/: index.ts
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: lib.rs  main.rs
server/src/handlers/: download.rs  info.rs  mod.rs
server/src/ytdlp/: builder.rs  finder.rs  mod.rs  parser.rs
server/tests/: api.rs
